fix collapsable fieldset css (1301)

--- a/css/forms.css
+++ b/css/forms.css
@@ -185,3 +185,7 @@ html.js input.throbbing {
 #edit-og-description-wrapper {
 	clear: both;
 }
+
+html.js fieldset.collapsed {
+	height: auto;
+}
